--- a/rescat/rescat/Map/Storyboard/Base.lproj/Map.storyboard
+++ b/rescat/rescat/Map/Storyboard/Base.lproj/Map.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--지도-->
+        <!--길냥이맵-->
         <scene sceneID="lE0-xH-s8A">
             <objects>
                 <viewController storyboardIdentifier="MapViewController" id="hEY-f8-J5n" customClass="MapViewController" customModule="rescat" customModuleProvider="target" sceneMemberID="viewController">
@@ -59,24 +59,46 @@
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="32" id="ern-Bv-nV4"/>
                                 </constraints>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DGn-Lp-OXI">
+                                <rect key="frame" x="90" y="557" width="195" height="33"/>
+                                <color key="backgroundColor" red="0.59999999999999998" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="Wf4-Kj-6ER"/>
+                                </constraints>
+                            </view>
+                            <view hidden="YES" alpha="0.40000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6LF-fJ-z2w">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="sUT-Fw-Aj3" firstAttribute="bottom" secondItem="I71-zs-CoK" secondAttribute="bottom" id="7Fi-dS-ln1"/>
+                            <constraint firstItem="I71-zs-CoK" firstAttribute="bottom" secondItem="DGn-Lp-OXI" secondAttribute="bottom" constant="33" id="8vz-bm-c7X"/>
+                            <constraint firstItem="DGn-Lp-OXI" firstAttribute="leading" secondItem="I71-zs-CoK" secondAttribute="leading" constant="90" id="98M-8J-5RN"/>
                             <constraint firstItem="sUT-Fw-Aj3" firstAttribute="leading" secondItem="I71-zs-CoK" secondAttribute="leading" id="CNq-oY-dmz"/>
+                            <constraint firstItem="6LF-fJ-z2w" firstAttribute="top" secondItem="B1g-V3-yxo" secondAttribute="top" id="HFw-t5-pio"/>
                             <constraint firstItem="I71-zs-CoK" firstAttribute="trailing" secondItem="772-VU-o1L" secondAttribute="trailing" constant="30" id="Ngz-Qa-vEm"/>
+                            <constraint firstItem="6LF-fJ-z2w" firstAttribute="leading" secondItem="I71-zs-CoK" secondAttribute="leading" id="OJK-D7-djT"/>
                             <constraint firstItem="sUT-Fw-Aj3" firstAttribute="trailing" secondItem="I71-zs-CoK" secondAttribute="trailing" id="QHL-F4-blI"/>
                             <constraint firstItem="sUT-Fw-Aj3" firstAttribute="top" secondItem="I71-zs-CoK" secondAttribute="top" id="S62-Bo-CEz"/>
+                            <constraint firstItem="6LF-fJ-z2w" firstAttribute="trailing" secondItem="I71-zs-CoK" secondAttribute="trailing" id="Sat-Sl-FrX"/>
                             <constraint firstItem="772-VU-o1L" firstAttribute="top" secondItem="I71-zs-CoK" secondAttribute="top" constant="16" id="Slm-CA-tY3"/>
+                            <constraint firstItem="I71-zs-CoK" firstAttribute="bottom" secondItem="6LF-fJ-z2w" secondAttribute="bottom" id="eXT-FJ-13F"/>
+                            <constraint firstItem="I71-zs-CoK" firstAttribute="trailing" secondItem="DGn-Lp-OXI" secondAttribute="trailing" constant="90" id="j8A-Ya-7vE"/>
                             <constraint firstItem="772-VU-o1L" firstAttribute="leading" secondItem="I71-zs-CoK" secondAttribute="leading" constant="30" id="m1k-hP-DvB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="I71-zs-CoK"/>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="지도" id="Jy8-hR-0WW">
+                    <navigationItem key="navigationItem" title="길냥이맵" id="Jy8-hR-0WW">
                         <rightBarButtonItems>
-                            <barButtonItem title="Item" image="iconNewPost" id="Apy-JU-fzf"/>
-                            <barButtonItem title="Item" image="iconSearch" id="Onf-LN-W1L"/>
+                            <barButtonItem title="Item" image="iconNewPost" id="Apy-JU-fzf">
+                                <color key="tintColor" red="0.47450980392156861" green="0.32941176470588235" blue="0.023529411764705882" alpha="1" colorSpace="calibratedRGB"/>
+                            </barButtonItem>
+                            <barButtonItem title="Item" image="iconSearch" id="Onf-LN-W1L">
+                                <color key="tintColor" red="0.47450980392156861" green="0.32941176470588235" blue="0.023529411764705882" alpha="1" colorSpace="calibratedRGB"/>
+                            </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
@@ -85,6 +107,8 @@
                         <outlet property="button2" destination="upv-lg-3MM" id="dAD-tK-rlI"/>
                         <outlet property="button3" destination="Db4-kT-JXH" id="lMG-qQ-VR6"/>
                         <outlet property="button4" destination="bCq-NY-gzv" id="cTO-pe-Zcg"/>
+                        <outlet property="coverView" destination="6LF-fJ-z2w" id="BrJ-n4-k6X"/>
+                        <outlet property="locationButtonView" destination="DGn-Lp-OXI" id="RzU-CB-aLK"/>
                         <outlet property="mapView" destination="sUT-Fw-Aj3" id="wOW-nw-ACH"/>
                         <outlet property="registerButton" destination="Apy-JU-fzf" id="cnj-Jn-eKq"/>
                         <outlet property="searchButton" destination="Onf-LN-W1L" id="4Hi-ce-2Nd"/>
@@ -97,7 +121,7 @@
         <!--Search View Controller-->
         <scene sceneID="PVz-94-FNr">
             <objects>
-                <viewController storyboardIdentifier="SearchViewController" id="rUr-dV-ahp" customClass="SearchViewController" customModule="rescat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="rUr-dV-ahp" customClass="SearchViewController" customModule="rescat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fFW-yC-iLE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -142,7 +166,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchTableViewCell" rowHeight="50" id="pHK-Bj-fse" customClass="SearchTableViewCell" customModule="rescat" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchTableViewCell" rowHeight="50" id="pHK-Bj-fse">
                                         <rect key="frame" x="0.0" y="102" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pHK-Bj-fse" id="RGu-Pr-tlG">
@@ -177,10 +201,6 @@
                                                 <constraint firstAttribute="trailing" secondItem="cpv-n4-1qh" secondAttribute="trailing" id="jWY-7w-TxJ"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="title" destination="Sqb-Mp-FKb" id="vcT-xB-Maz"/>
-                                            <outlet property="type" destination="WOQ-4o-S3I" id="hwF-mz-Qbh"/>
-                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <sections/>
@@ -195,14 +215,90 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lfG-Jd-nm3"/>
                     </view>
-                    <connections>
-                        <outlet property="searchBar" destination="GBk-UW-A3y" id="hny-tW-36p"/>
-                        <outlet property="searchListTableView" destination="9VH-JU-7Oc" id="bbk-xV-9It"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HXF-hl-px6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2567.1999999999998" y="740.7796101949026"/>
+        </scene>
+        <!--Search View Controller-->
+        <scene sceneID="sEf-Vt-fnk">
+            <objects>
+                <viewController storyboardIdentifier="SearchViewController" id="2P6-iC-13l" customClass="SearchViewController" customModule="rescat" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="m8t-eU-lAo">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="hnf-dQ-7xP">
+                                <rect key="frame" x="16" y="33" width="343" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="wkl-Pu-xp0"/>
+                                </constraints>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="최근 검색 기록" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vuy-my-uNI">
+                                <rect key="frame" x="24" y="109" width="81" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.76078431372549016" green="0.59999999999999998" blue="0.50588235294117645" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mEb-8x-kim">
+                                <rect key="frame" x="0.0" y="143" width="375" height="524"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchTableViewCell" id="pdr-D7-pjA" customClass="SearchTableViewCell" customModule="rescat" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pdr-D7-pjA" id="sF4-Zu-1e9">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BOF-6u-sVG">
+                                                    <rect key="frame" x="52" y="11" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Xm-pS-oPh">
+                                                    <rect key="frame" x="114" y="11" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="title" destination="BOF-6u-sVG" id="NJX-MF-urv"/>
+                                            <outlet property="type" destination="7Xm-pS-oPh" id="eFr-uk-TbA"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="hnf-dQ-7xP" secondAttribute="trailing" constant="16" id="2UW-cR-IEP"/>
+                            <constraint firstItem="Vuy-my-uNI" firstAttribute="top" secondItem="hnf-dQ-7xP" secondAttribute="bottom" constant="28" id="2Uv-2l-WYl"/>
+                            <constraint firstItem="mEb-8x-kim" firstAttribute="top" secondItem="Vuy-my-uNI" secondAttribute="bottom" constant="17" id="8WO-LJ-KC7"/>
+                            <constraint firstItem="Vuy-my-uNI" firstAttribute="leading" secondItem="8z4-7w-iYe" secondAttribute="leading" constant="24" id="AGk-uM-O6g"/>
+                            <constraint firstItem="8z4-7w-iYe" firstAttribute="bottom" secondItem="mEb-8x-kim" secondAttribute="bottom" id="BUq-i5-aNR"/>
+                            <constraint firstItem="mEb-8x-kim" firstAttribute="leading" secondItem="8z4-7w-iYe" secondAttribute="leading" id="Bmw-Xt-s2W"/>
+                            <constraint firstItem="hnf-dQ-7xP" firstAttribute="top" secondItem="8z4-7w-iYe" secondAttribute="top" constant="13" id="Gh5-yf-BUi"/>
+                            <constraint firstItem="hnf-dQ-7xP" firstAttribute="leading" secondItem="8z4-7w-iYe" secondAttribute="leading" constant="16" id="Q01-6H-yDl"/>
+                            <constraint firstItem="8z4-7w-iYe" firstAttribute="trailing" secondItem="mEb-8x-kim" secondAttribute="trailing" id="a09-Qe-AGt"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="8z4-7w-iYe"/>
+                    </view>
+                    <connections>
+                        <outlet property="searchBar" destination="hnf-dQ-7xP" id="f2c-FI-eQY"/>
+                        <outlet property="searchListTableView" destination="mEb-8x-kim" id="ezz-XX-znk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dk0-go-dRU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2243" y="1412"/>
         </scene>
         <!--Modify View Controller-->
         <scene sceneID="f6i-7H-156">
