--- a/rescat/rescat/Main/Storyboard/Base.lproj/Main.storyboard
+++ b/rescat/rescat/Main/Storyboard/Base.lproj/Main.storyboard
@@ -13,16 +13,20 @@
         <!--Tab Bar Controller-->
         <scene sceneID="nbi-BY-4ah">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="mVF-x8-DHt" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="mVF-x8-DHt" customClass="TabBarController" customModule="rescat" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3cA-dB-His">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="defaultIndex">
+                            <integer key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <segue destination="hFs-Fx-JkP" kind="relationship" relationship="viewControllers" id="1dS-1g-H9W"/>
-                        <segue destination="Qvc-A1-Xv3" kind="relationship" relationship="viewControllers" id="CiB-Ua-iX1"/>
                         <segue destination="aUh-PN-WQj" kind="relationship" relationship="viewControllers" id="mxk-Wa-q4E"/>
                         <segue destination="bvF-1l-8SL" kind="relationship" relationship="viewControllers" id="683-bc-ibX"/>
                     </connections>
@@ -609,25 +613,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="98h-sC-ZNX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1844" y="2526"/>
-        </scene>
-        <!--커뮤니티-->
-        <scene sceneID="JbS-35-0n8">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Qvc-A1-Xv3" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="커뮤니티" id="DYY-no-De8"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="vvO-2d-wHT">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="KEE-rq-SW7" kind="relationship" relationship="rootViewController" id="DaX-01-OJm"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7gm-Kc-Clp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1054" y="907"/>
         </scene>
         <!--마이페이지-->
         <scene sceneID="gfi-Tv-BwQ">
