--- a/rescat/rescat/Adoption/Storyboard/Adoption.storyboard
+++ b/rescat/rescat/Adoption/Storyboard/Adoption.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eBA-fV-5ON">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pID-Fw-7cM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,20 +10,20 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Community View Controller-->
-        <scene sceneID="Zm0-b5-tvc">
+        <!--View Controller-->
+        <scene sceneID="n7L-wd-GWZ">
             <objects>
-                <viewController storyboardIdentifier="CommunityViewController" id="eBA-fV-5ON" customClass="CommunityViewController" customModule="rescat" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="nCz-4b-VH6">
+                <viewController id="pID-Fw-7cM" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Tps-WX-7yF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="ph6-sg-9vO"/>
+                        <viewLayoutGuide key="safeArea" id="mFf-ah-t8J"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BTm-Jt-mL3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iW4-xF-Hpk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-286" y="-80"/>
+            <point key="canvasLocation" x="-79" y="94"/>
         </scene>
     </scenes>
 </document>
