--- a/rescat/rescat/Sign/Storyboard/Care.storyboard
+++ b/rescat/rescat/Sign/Storyboard/Care.storyboard
@@ -100,7 +100,7 @@
                                 <color key="textColor" red="0.40644258260726929" green="0.30323114991188049" blue="0.22351187467575073" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2단계 지역선택" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lLm-0z-m9j">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2단계 지역설정" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lLm-0z-m9j">
                                 <rect key="frame" x="160" y="324.5" width="55.5" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="WEU-Tr-F1F"/>
@@ -183,7 +183,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2단계 지역선택" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E3P-Zy-Seo">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2단계 지역설정" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E3P-Zy-Seo">
                                 <rect key="frame" x="127.5" y="90" width="120" height="24"/>
                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="20"/>
                                 <color key="textColor" red="0.27455252409999997" green="0.27443435789999998" blue="0.27843213080000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -604,32 +604,32 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yU2-RU-cPN">
-                                            <rect key="frame" x="37" y="245" width="301" height="1"/>
+                                            <rect key="frame" x="37" y="254" width="301" height="1"/>
                                             <color key="backgroundColor" red="0.74902480839999996" green="0.75300079580000001" blue="0.74901968240000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="1" id="fxz-jK-Nae"/>
                                             </constraints>
                                         </view>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="01012341234" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PYj-dK-5jC">
-                                            <rect key="frame" x="59" y="216" width="201" height="21"/>
+                                            <rect key="frame" x="59" y="216" width="201" height="30"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="21" id="OSZ-ET-SGa"/>
+                                                <constraint firstAttribute="height" constant="30" id="OSZ-ET-SGa"/>
                                             </constraints>
                                             <color key="textColor" red="0.40256536009999999" green="0.30317774419999999" blue="0.2274345458" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <fontDescription key="fontDescription" name="AppleSDGothicNeo-Medium" family="Apple SD Gothic Neo" pointSize="18"/>
                                             <textInputTraits key="textInputTraits" keyboardType="phonePad" textContentType="tel"/>
                                         </textField>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="인증번호 입력" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V14-5g-ndy">
-                                            <rect key="frame" x="59" y="292" width="201" height="21"/>
+                                            <rect key="frame" x="59" y="301" width="201" height="30"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="21" id="A9H-Xv-xuY"/>
+                                                <constraint firstAttribute="height" constant="30" id="A9H-Xv-xuY"/>
                                             </constraints>
                                             <color key="textColor" red="0.40256536009999999" green="0.30317774419999999" blue="0.2274345458" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <fontDescription key="fontDescription" name="AppleSDGothicNeo-Medium" family="Apple SD Gothic Neo" pointSize="18"/>
                                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                         </textField>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FZv-E5-LTu">
-                                            <rect key="frame" x="270" y="209.5" width="63" height="34"/>
+                                            <rect key="frame" x="270" y="214" width="63" height="34"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="63" id="Xey-aJ-Gvf"/>
                                             </constraints>
@@ -662,7 +662,7 @@
                                             </connections>
                                         </button>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bhc-LF-Aq6">
-                                            <rect key="frame" x="37" y="321" width="301" height="1"/>
+                                            <rect key="frame" x="37" y="339" width="301" height="1"/>
                                             <color key="backgroundColor" red="0.74902480839999996" green="0.75300079580000001" blue="0.74901968240000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="1" id="7KN-3V-Y87"/>
