--- a/rescat/rescat/Sign/Storyboard/Care.storyboard
+++ b/rescat/rescat/Sign/Storyboard/Care.storyboard
@@ -616,7 +616,7 @@
                                             </constraints>
                                             <color key="textColor" red="0.40256536009999999" green="0.30317774419999999" blue="0.2274345458" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <fontDescription key="fontDescription" name="AppleSDGothicNeo-Medium" family="Apple SD Gothic Neo" pointSize="18"/>
-                                            <textInputTraits key="textInputTraits" keyboardType="phonePad" textContentType="tel"/>
+                                            <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                                         </textField>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="인증번호 입력" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V14-5g-ndy">
                                             <rect key="frame" x="59" y="407" width="201" height="30"/>
